Disable mouse pointer events for js tree marker line to fix bug with drag and drop not working if user cursor overlaps the marker line.

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -10,3 +10,7 @@
     width: auto;
     overflow-x: visible;
 }
+
+#jstree-marker-line {
+    pointer-events: none;
+}
